# drum_notation

./: .gitignore  AGENTS.md  LEARNINGS.md  TASKS.md  build-docs.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-pages.yml
crates/drummark-core/: Cargo.toml
crates/drummark-core/src/: ast.rs  error.rs  event.rs  fraction.rs  hairpin.rs  lexer.rs  lib.rs  nav.rs  normalize.rs  parser.rs  render_score.rs  resolve.rs  to_js.rs  validate.rs  volta.rs
crates/drummark-layout/: Cargo.toml
docs/: DRUMMARK_SPEC.md  RENDER_LAYOUT_CONTRACT.md
docs/archived/: ARCHITECTURE_proposal_lezer_to_rust_wasm.md  ARCHITECTURE_proposal_remove_vexflow.md  ARCHITECTURE_tasks_lezer_to_rust_wasm.md  ARCHITECTURE_tasks_remove_vexflow.md  LEARNINGS_legacy_2026-05-18.md
docs/layout-corpus/: corpus_gate_report.json
docs/proposals/: APP_proposal_react_to_preact_migration.md  APP_tasks_react_to_preact_migration.md  ARCHITECTURE_proposal_layout_engine.md  ARCHITECTURE_proposal_normalizer_to_rust.md  ARCHITECTURE_proposal_platform_neutral_drum_layout.md  ARCHITECTURE_proposal_split_parser_layout_wasm.md  ARCHITECTURE_tasks_layout_engine.md  ARCHITECTURE_tasks_normalizer_to_rust.md  ARCHITECTURE_tasks_platform_neutral_drum_layout.md  ARCHITECTURE_tasks_split_parser_layout_wasm.md  (+7 more)
scripts/: audit_render_network.mjs  build_wasm.mjs  check_import_boundaries.mjs  check_import_boundaries.production.test.mjs  check_import_boundaries.test.mjs
src/: App.layoutEnginePagination.test.ts  App.tsx  cli.ts  cli_output.test.ts  cli_runtime.test.ts  cli_runtime.ts  main.tsx  scoreState.test.ts  scoreState.ts  scoreWorker.ts  styles.css
src/dsl/: ast.ts  normalize.ts  (+8 more)
(+61 files in other folders)
