[package]
name = "drummark-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DrumMark notation parser — source text to AST"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "drummark"
path = "src/main.rs"

[dependencies]
logos = "0.15"
wasm-bindgen = "0.2"
js-sys = "0.3"
drummark-layout = { path = "../drummark-layout" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
