[package]
name = "drummark-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DrumMark notation parser — source text to AST"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "drummark"
path = "src/main.rs"

[dependencies]
logos = "0.15"
wasm-bindgen = "0.2"
js-sys = "0.3"
drummark-layout = { path = "../drummark-layout", optional = true }

[features]
default = ["parser-wasm", "layout-wasm"]
parser-wasm = []
layout-wasm = ["dep:drummark-layout"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
